--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,18 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 token.signing.key=01S202G7Ui221907Jl102O920A339vC8O6C032022aT4951
+
+
+
+
+# SMTP server settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=smstestcct@gmail.com
+spring.mail.password=qssealtiugugormc
+spring.mail.mail.transport.protocol=smtp
+spring.mail.mail.smtp.auth=true
+spring.mail.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
