--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.6.2</version>
+			<scope>provided</scope>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,16 +71,18 @@
         	<groupId>org.springframework</groupId>
         	<artifactId>spring-webmvc</artifactId>
     	</dependency>
-    	
-    	
-    	
-    	<!--
-    	<dependency>
-    		<groupId>javax.persistence</groupId>
-    		<artifactId>javax.persistence-api</artifactId>
-    		<version>2.2</version>
-		</dependency> 
-    	-->
+
+
+
+
+
+		<!--
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
