--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/salon?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
-#spring.datasource.url=jdbc:mysql://bs-mysql:3306/salon?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
 
+#spring.datasource.url=jdbc:mysql://bs-mysql:3306/salon?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/salon?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.username=root
@@ -8,19 +8,19 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
-
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.security.user.name=admin
 spring.security.user.password=admin
-
 token.signing.key=01S202G7Ui221907Jl102O920A339vC8O6C032022aT4951
 
 # SMTP server settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=smstestcct@gmail.com
-spring.mail.password=qssealtiugugormc
+#spring.mail.username=smstestcct@gmail.com
+#spring.mail.password=qssealtiugugormc
+spring.mail.username=beautysaloncct@gmail.com
+spring.mail.password=nyagncikqtlvsujt
 spring.mail.mail.transport.protocol=smtp
 spring.mail.mail.smtp.auth=true
 spring.mail.mail.smtp.starttls.enable=true
